[project]
name = "wadoh-raccoon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "DOH-FAA3303", email = "frank.aragona@doh.wa.gov" }
]
requires-python = ">=3.11"
dependencies = [
    "polars>=1.24.0",
]

[project.scripts]
wadoh-raccoon = "wadoh_raccoon:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
