[project]
name = "wadoh-raccoon"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "DOH-FAA3303", email = "frank.aragona@doh.wa.gov" }
]
requires-python = ">=3.11"
dependencies = [
    "azure-identity>=1.21.0",
    "azure-keyvault-secrets>=4.9.0",
    "great-tables>=0.17.0",
    "paramiko>=2.8.1",
    "polars>=1.18.0",
]

[project.scripts]
wadoh-raccoon = "wadoh_raccoon:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "nbclient>=0.10.2",
    "nbformat>=5.10.4",
    "pytest>=8.3.5",
    "quartodoc>=0.9.1",
]
